--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 </head>
 <body>
 TEST
 </body>
+<script>
+
+// Test server - to remove
+d3.json('/test', function(data) {
+  console.log( data );
+});
+</script>
 </html>
