--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>CODE - Zen and the Art of Data Wrangling</title>
+    <title>Beyond - Zen Coders</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
@@ -56,9 +56,7 @@
     	</div>
 
         <div id="footer">
-
-            Zen and the Art of Data Wrangling. Produced as part of CODE 2015.
-
+            Zen Coders. Produced as part of CODE 2015.
         </div>
 
 
