Front-end updates
Bug fix, optimization, etc.

--- a/client_module/3.html
+++ b/client_module/3.html
@@ -17,7 +17,7 @@
 
 		<div class="module autoheight long insight">
 
-			<p><strong id="increase"></strong><span id="gap"> increase</span><span> since last year</span></p>
+			<p><strong id="increase"></strong><span id="gap"> </span><span> since last year</span></p>
 
 		</div>			
 
@@ -33,13 +33,13 @@
 
 		<div class="module autoheight insight">
 
-			<p><strong id="supply">5123</strong><span> jobs</span></p>
+			<p><strong id="supply"></strong><span> jobs</span></p>
 
 		</div>
 
 		<div class="module autoheight right insight">
 
-			<p><strong id="demand">422</strong><span> looking</span></p>
+			<p><strong id="demand"></strong><span> looking</span></p>
 
 		</div>		
 
@@ -56,7 +56,7 @@
 
 		<div class="module autoheight long insight">
 
-			<p><strong id="ratio">1:2</strong><span>competition</span></p>
+			<p><strong id="ratio"></strong><span>competition</span></p>
 
 		</div>			
 
@@ -73,7 +73,7 @@
 
 		<div class="module autoheight long insight">
 
-			<p><strong id="schoolLeavers">1:2</strong><span> graduating this year</span></p>
+			<p><strong id="schoolLeavers"></strong><span> graduating this year</span></p>
 
 		</div>			
 
