--- a/client_module/index.html
+++ b/client_module/index.html
@@ -68,6 +68,7 @@
 			<option>2017</option>
 			<option>2018</option>
 			<option>2019</option>
+			<option>2020</option>
 		</select>
 
 		<a href="#2/Graduating Year" class="search_button" id="range_search">
