--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Beyond - Zen Coders</title>
+    <title>CODE 2015 - BEYOND</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.3.0/lodash.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.9/c3.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
 
 
@@ -28,7 +29,7 @@
 
     		<div id="header_content">
 
-				<i id="header_menu_toggle" class="fa fa-chevron-left"></i>
+				<a id="header_menu_toggle_link" href="#index/Welcome"><i id="header_menu_toggle" class="fa fa-home"></i></a>
 
 	    		<span id="header_title">&nbsp;</span>
 
@@ -56,7 +57,9 @@
     	</div>
 
         <div id="footer">
-            Zen Coders. Produced as part of CODE 2015.
+
+            Created by Zen Coders. Produced as part of CODE 2015.
+
         </div>
 
 
