--- a/client_module/3.html
+++ b/client_module/3.html
@@ -11,7 +11,7 @@
 
 		<div class="module autoheight long insight">
 
-			<p><strong id="projection"></strong><span> jobs in total this year</span></p>
+			<p><strong id="projection"></strong><span> positions in total this year</span></p>
 
 		</div>		
 
@@ -33,13 +33,13 @@
 
 		<div class="module autoheight insight">
 
-			<p><strong id="supply"></strong><span> jobs</span></p>
+			<p><strong id="supply"></strong><span> seekers</span></p>
 
 		</div>
 
 		<div class="module autoheight right insight">
 
-			<p><strong id="demand"></strong><span> looking</span></p>
+			<p><strong id="demand"></strong><span> openings</span></p>
 
 		</div>		
 
